--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div>
                 <span class="info">Turn for X</span>
-                <button id="reset">Resat</button>
+                <button id="reset">Reset</button>
             </div>
             <div class="imgbox">
                 <img src="/excited.gif" alt="" srcset="">
